--- a/BugTracker/Views/Projects/Edit.cshtml
+++ b/BugTracker/Views/Projects/Edit.cshtml
@@ -9,7 +9,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Project</h4>
         <hr />
@@ -26,12 +26,18 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                @*<input type="submit" value="Save" class="btn btn-default" />*@
+                <input type="submit" value="Save" class="submitButton" />
             </div>
         </div>
     </div>
 }
 
-<div>
+@*<div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
+<button class="submitButton" type="button">
+    <p class="link">
+        @Html.ActionLink("Back to List", "Index", "Projects", null, new { style = "color: white;text-decoration:none" })
+    </p>
+</button>
