--- a/BugTracker/Views/Notifications/Index.cshtml
+++ b/BugTracker/Views/Notifications/Index.cshtml
@@ -8,22 +8,17 @@
 
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Ticket.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Content)
-        </th>
+        <th></th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Ticket.Title)
+            @Html.DisplayFor(modelItem => item.Content)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Content)
+            <a href='@Url.Action("Details", "Tickets", new { id = item.TicketId })'>Details</a>
         </td>
     </tr>
 }
