--- a/BugTracker/Views/Projects/AssignUserToProject.cshtml
+++ b/BugTracker/Views/Projects/AssignUserToProject.cshtml
@@ -7,7 +7,17 @@
 
 @using (Html.BeginForm())
 {
-    <p>Select User @Html.DropDownList("UserId") </p>
+    @*<p>Select User @Html.DropDownList("UserId") </p>
     <p>Select Project @Html.DropDownList("projectId") </p>
-    <input type="submit" value="Add User to the Project" />
+    <input type="submit" value="Add User to the Project" />*@
+    <br />
+    <p><b>Select User: </b> @Html.DropDownList("UserId") </p>
+    <br />
+    <p><b>Select Project: </b> @Html.DropDownList("projectId") </p>
+    <br />
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Add User to Project" class="submitButton" />
+        </div>
+    </div>
 }
