--- a/BugTracker/Views/Projects/Delete.cshtml
+++ b/BugTracker/Views/Projects/Delete.cshtml
@@ -21,12 +21,24 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
+        @*<div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
+        </div>*@
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Delete" class="submitButton" />
+            </div>
         </div>
+        <button class="submitButton" type="button">
+            <p class="link">
+                @Html.ActionLink("Back to List", "Index", "Projects", null, new { style = "color: white;text-decoration:none" })
+            </p>
+        </button>
     }
 </div>
