--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -146,7 +146,10 @@
                 {
                     <p>Description: @attachment.Description</p>
                     <p>Added By: @attachment.User.Email</p>
-                 }
+                    @Html.ActionLink("Edit Attachment", "EditAttachment", new { id = attachment.Id } , null) 
+                    @Html.ActionLink("Delete Attachment", "DeleteAttachment", new { id = attachment.Id })
+                }
+
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
