--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -63,6 +63,8 @@
         @Html.RadioButton("option", "Type")<text>Type </text>
         @Html.RadioButton("option", "Title")<text>Title </text>
         @Html.RadioButton("option", "Description")<text>Description </text>
+        @Html.RadioButton("option", "Submitter")<text>Submitter </text>
+        @Html.RadioButton("option", "Developer")<text>Developer </text>
 
         @Html.TextBox("searchBy")
         <input type="submit" name="submit" value="SearchTickets" />
