--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -38,6 +38,7 @@
         </div>
     </div>
     <div class="navigate">
+        <p><b>Sort Options:</b></p>
         <div>
             <button class="question" type="button"><p class="link"> @Html.ActionLink("TYPES", "SortTickets", "Tickets", new { sortBy = "type" }, new { style = "color: white;text-decoration:none" }) </p></button>
 
@@ -59,39 +60,59 @@
         </div>
     </div>
 </div>
+<br />
+<div>
+    @using (Html.BeginForm("SearchTickets", "Tickets", FormMethod.Get))
+    {
+        <p><b>Search Options:</b></p>
+        @Html.RadioButton("option", "Project")<text>Project </text>
+        @Html.RadioButton("option", "Priority")<text>Priority </text>
+        @Html.RadioButton("option", "Status")<text>Status </text>
+        @Html.RadioButton("option", "Type")<text>Type </text>
+        @Html.RadioButton("option", "Title")<text>Title </text>
+        @Html.RadioButton("option", "Description")<text>Description </text>
+        @Html.RadioButton("option", "Submitter")<text>Submitter </text>
+        @Html.RadioButton("option", "Developer")<text>Developer </text>
 
+        @Html.TextBox("searchBy")
+        <input type="submit" name="submit" value="SearchTickets" />
+    }
+</div>
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.First().AssignedToUser.Email)
+            @Html.DisplayName("Developer Email")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().OwnerUser.Email)
+            @Html.DisplayName("Submitter Email")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Project.Name)
+            @Html.DisplayName("Project Name")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().TicketPriority.Name)
+            @Html.DisplayName("Ticket Priority")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().TicketStatus.Name)
+            @Html.DisplayName("Ticket Status")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().TicketType.Name)
+            @Html.DisplayName("Ticket Type")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Title)
+            @Html.DisplayName("Ticket Title")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Description)
+            @Html.DisplayName("Ticket Description")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Created)
+            @Html.DisplayName("Date Created")
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.First().Updated)
+            @Html.DisplayName("Date Updated")
+        </th>
+        <th>
+            @Html.DisplayName("Attachments")
         </th>
         <th></th>
     </tr>
@@ -130,9 +151,20 @@
                 @Html.DisplayFor(modelItem => item.Updated)
             </td>
             <td>
+                @foreach (var attachment in item.TicketAttachments)
+                {
+                    <p>Description: @attachment.Description</p>
+                    <p>Added By: @attachment.User.Email</p>
+                    <a href="@Url.Action("EditAttachment", "Attachments", new { id = attachment.Id })">Edit Attachment</a> 
+                    <a href="@Url.Action("DeleteAttachment", "Attachments", new { id = attachment.Id })">Delete Attachment</a> 
+                }
+            </td>
+            <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
+                @Html.ActionLink("Add Attachment", "AddAttachmentToTicket", new { id = item.Id }) |
+                <a href="@Url.Action("AddAttachmentToTicket", "Attachments")">Add Attachment</a> |
                 @if (ViewBag.Roles.Contains("Project Manager") || ViewBag.Roles.Contains("Admin"))
                 {
                     @Html.ActionLink("Assign Developer", "AssignDeveloperToTicket", new { id = item.Id })
