--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -112,6 +112,9 @@
             @Html.DisplayName("Date Updated")
         </th>
         <th>
+            @Html.DisplayName("Comments")
+        </th>
+        <th>
             @Html.DisplayName("Attachments")
         </th>
         <th></th>
@@ -151,12 +154,33 @@
                 @Html.DisplayFor(modelItem => item.Updated)
             </td>
             <td>
+                @foreach (var comment in item.TicketComments)
+                {
+                    <div class="">
+                        <p>@comment.Comment, Date:@comment.Created.ToString("d")</p>
+                    </div>
+                }
+                <br />
+                @using (Html.BeginForm("AddTicketComment", "Comments", new { ticketId = item.Id }, FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    <div class="">
+                        @Html.TextArea("content", "")
+                        @Html.HiddenFor(modelItem => item.Id)
+                    </div>
+                    <div>
+                        <button type="submit" class="question"><p class="link"> Add Comment </p></button>
+                    </div>
+                }
+            </td>
+            <td>
                 @foreach (var attachment in item.TicketAttachments)
                 {
                     <p>Description: @attachment.Description</p>
                     <p>Added By: @attachment.User.Email</p>
-                    <a href="@Url.Action("EditAttachment", "Attachments", new { id = attachment.Id })">Edit Attachment</a> 
-                    <a href="@Url.Action("DeleteAttachment", "Attachments", new { id = attachment.Id })">Delete Attachment</a> 
+                    <a href="@Url.Action("EditAttachment", "Attachments", new { id = attachment.Id })">Edit Attachment</a>
+                    <a href="@Url.Action("DeleteAttachment", "Attachments", new { id = attachment.Id })">Delete Attachment</a>
                 }
             </td>
             <td>
