--- a/BugTracker/Views/Attachments/AddAttachmentToTicket.cshtml
+++ b/BugTracker/Views/Attachments/AddAttachmentToTicket.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Add Attachment To Ticket</h2>
 
-@using (Html.BeginForm("AddAttachmentToTicket", "Tickets", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+@using (Html.BeginForm("AddAttachmentToTicket", "Attachments", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="form-horizontal">
