--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -161,7 +161,7 @@
                     </div>
                 }
                 <br />
-                @using (Html.BeginForm("AddTicketComment", "Comments", new { ticketId = item.Id }, FormMethod.Post))
+                @using (Html.BeginForm("AddTicketComment", "Comments", new { ticketId = item.Id }, FormMethod.Post,null))
                 {
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -187,8 +187,7 @@
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id }) |
-                @Html.ActionLink("Add Attachment", "AddAttachmentToTicket", new { id = item.Id }) |
-                <a href="@Url.Action("AddAttachmentToTicket", "Attachments")">Add Attachment</a> |
+                <a href="@Url.Action("AddAttachmentToTicket", "Attachments", new { id = item.Id })">Add Attachment</a> |
                 @if (ViewBag.Roles.Contains("Project Manager") || ViewBag.Roles.Contains("Admin"))
                 {
                     @Html.ActionLink("Assign Developer", "AssignDeveloperToTicket", new { id = item.Id })
