--- a/BugTracker/Views/Tickets/UpdateStatus.cshtml
+++ b/BugTracker/Views/Tickets/UpdateStatus.cshtml
@@ -8,5 +8,6 @@
 @using (Html.BeginForm())
 {
     <p>Select Status @Html.DropDownList("StatusId") </p>
-    <input type="submit" value="Update Status" />
+    <br />
+    <input type="submit" value="Update Status" class="submitButton" />
 }
