--- a/BugTracker/Content/Site.css
+++ b/BugTracker/Content/Site.css
@@ -67,12 +67,17 @@ a:hover {
 }
 
 /*For Dropdown menu*/
-.dropbtn {
+.dropbtn, .dropbtn2 {
     background-color: white;
     color: #04AA6D;
     padding: 6px;
+    padding-top:0px;
     font-size: 16px;
     border: none;
+}
+
+.dropbtn2 {
+    color: #0439b5;
 }
 
 .dropdown {
@@ -80,7 +85,7 @@ a:hover {
     display: inline-block;
 }
 
-.dropdown-content {
+.dropdown-content, .dropdown-content-two {
     display: none;
     position: absolute;
     background-color: #478f6c;
@@ -89,7 +94,11 @@ a:hover {
     z-index: 1;
 }
 
-    .dropdown-content a {
+.dropdown-content-two {
+    background-color: #193e94;
+}
+
+    .dropdown-content a, .dropdown-content-two a {
         color: white;
         padding: 12px 16px;
         text-decoration: none;
@@ -100,10 +109,47 @@ a:hover {
             background-color: #06ba00;
         }
 
+        .dropdown-content-two a:hover {
+            background-color: #1c5ffc;
+        }
+
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropdown-content-two {
     display: block;
 }
 
 .dropdown:hover .dropbtn {
     background-color: white;
+}
+
+.navigate {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.nav1, .nav2 {
+    width: 50%;
+    display: flex;
+}
+
+.creat, .notification, .dList{
+    margin-right: 10px;
+}
+
+.nav1 {
+    flex-direction: row;
+    align-content: flex-start;
+}
+
+.nav2 {
+    flex-direction: row-reverse;
+    align-content: flex-end;
+}
+
+.dList{
+    display:flex;
+    flex-flow: row wrap;
 }
