--- a/BugTracker/Views/Tickets/Histories.cshtml
+++ b/BugTracker/Views/Tickets/Histories.cshtml
@@ -6,9 +6,14 @@
 
 <h2>Histories</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="">
+    <button class="submitButton" type="button">
+        <p class="link">
+            @Html.ActionLink("Create New", "Create", null, new { style = "color: white;text-decoration:none" })
+        </p>
+    </button>
+</div>
+
 <table class="table">
     <tr>
         <th>
@@ -32,32 +37,38 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Ticket.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.User.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Property)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.OldValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NewValue)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Changed)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Ticket.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.Email)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Property)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.OldValue)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NewValue)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Changed)
+            </td>
+            <td>
+                <div class="dropdown">
+                    <button class="dropbtn"><i class="fas fa-caret-square-down fa-2x"></i></button>
+                    <div class="dropdown-content">
+                        <a class="" href="@Url.Action("Edit", "Edit", new { id = item.Id})">Edit</a>
+                        <a class="" href="@Url.Action("Details", "Details", new { id = item.Id})">Details</a>
+                        <a class="" href="@Url.Action("Delete", "Delete", new { id = item.Id})">Delete</a>
+                    </div>
+                </div>
+            </td>
+        </tr>
+    }
 
 </table>
