--- a/BugTracker/Views/Notifications/Index.cshtml
+++ b/BugTracker/Views/Notifications/Index.cshtml
@@ -9,16 +9,12 @@
 <table class="table">
     <tr>
         <th></th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Content)
-        </td>
-        <td>
-            <a href='@Url.Action("Details", "Tickets", new { id = item.TicketId })'>Details</a>
+            <a href='@Url.Action("Details", "Tickets", new { id = item.TicketId })'>@item.Content</a>
         </td>
     </tr>
 }
