--- a/BugTracker/Views/Tickets/Create.cshtml
+++ b/BugTracker/Views/Tickets/Create.cshtml
@@ -6,10 +6,10 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Ticket</h4>
         <hr />
@@ -54,14 +54,18 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+        @*<div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>*@
+        <input type="submit" value="Create" class="submitButton" />
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<br />
+<button class="submitButton" type="button">
+    <p class="link">
+        @Html.ActionLink("Back to List", "Index", null, new { style = "color: white;text-decoration:none" })
+    </p>
+</button>
