--- a/BugTracker/Views/Tickets/AllTickets.cshtml
+++ b/BugTracker/Views/Tickets/AllTickets.cshtml
@@ -73,6 +73,7 @@
         @Html.RadioButton("option", "Description")<text>Description </text>
         @Html.RadioButton("option", "Submitter")<text>Submitter </text>
         @Html.RadioButton("option", "Developer")<text>Developer </text>
+        @Html.RadioButton("option", "AllTickets")<text>AllTickets </text>
 
         @Html.TextBox("searchBy")
         <input type="submit" name="submit" value="SearchTickets" />
